[package]
name = "rage-wasm"
version = "0.2.1"
authors = ["Kan-Ru Chen <kanru@kanru.info>"]
repository = "https://github.com/kanru/rage-wasm"
readme = "README.md"
keywords = ["rage", "encryption", "wasm"]
categories = ["cryptography"]
edition = "2018"
license = "MIT OR Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
# For wasm release - reduces size by 77KiB
# crate-type = ["cdylib"]

[dependencies]
# WebAssembly interop
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"
# Core encryption library
# age = { version = "0.5.0", git = "https://github.com/str4d/rage", rev = "386ccc91bd", features = ["armor", "web-sys"] }
age = { version = "0.6.0", features = ["armor", "web-sys"] }
# For key generation
secrecy = "0.7.0"

# Enable rand_core's wasm support with js runtime
getrandom = { version = "0.1.16", features = ["wasm-bindgen"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

[profile.release]
opt-level = "s"
lto = true
panic = 'abort'
