[package]
name = "rage-wasm"
version = "0.3.1"
authors = ["Kan-Ru Chen <kanru@kanru.info>"]
repository = "https://github.com/kanru/rage-wasm"
readme = "README.md"
keywords = ["rage", "encryption", "wasm"]
categories = ["cryptography"]
edition = "2021"
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly interop
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
# Core encryption library
age = { version = "0.9.2", features = ["armor", "web-sys"] }
# For key generation
secrecy = "0.8.0"

# Enable rand_core's wasm support with js runtime
getrandom_2_7 = { package = "getrandom", version = "0.2.7", features = ["js"] }
getrandom_1_16 = { package = "getrandom", version = "0.1.16", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
